--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -1,17 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+<div class="container-fluid">
+    <a href="">Droplet Logo</a>
+    <button type="button">
+        <NavLink class="nav-link" href="login">
+            Sign up/Log in
+        </NavLink>
+    </button>
 </div>
+
+<NavMenu />
+
+<main class="container">
+    @Body
+</main>
