--- a/SeniorProj/Client/Shared/NavMenu.razor
+++ b/SeniorProj/Client/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="forum">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Forum
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Forum
                     </NavLink>
                 </li>
                 <li class="nav-item">
@@ -23,7 +23,7 @@
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="resources">
-                        <span class="oi oi-home" aria-hidden="true"></span> Natural Disaster Resources
+                        <span class="oi oi-plus" aria-hidden="true"></span> Natural Disaster Resources
                     </NavLink>
                 </li>
             </ul>
