added nav bar and logo

--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="container-fluid">
-    <a href="">Droplet Logo</a>
+    <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
     <button type="button">
         <NavLink class="nav-link" href="login">
             Sign up/Log in
