--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -4,15 +4,11 @@
 <style>
     /* Page content */
     h1{
-     font-family: 'Source Sans Pro', sans-serif;
-     font-weight: bold;
      text-align: center;
      margin-top: 40px;
     }
     
     h2{
-     font-family: 'Source Sans Pro', sans-serif;
-     font-weight: bold;
      text-align: center;
     }
     
@@ -24,13 +20,10 @@
      margin: 0 auto 30px;
      margin-top: 25px;
     }
-    
-    p{
-     font-family: 'Source Sans Pro', sans-serif;
-    }
+ 
     
     a.link{
-     font-family: 'Source Sans Pro', sans-serif;
+     font-family: sans-serif;
      color: #0082e6;
      text-decoration: none;
     }
@@ -44,12 +37,6 @@
      margin-top: 25px;
     }
     /*end page content*/
-    
-    #footer{
-     /*contact us section*/
-     text-align: center;
-     margin-bottom: 5px;
-    }
     
 
 </style>
@@ -80,17 +67,14 @@
 
 <div id="freezing">
     <h2>Freezing Temperatures</h2>
-    <p>
-        It is important to be aware of freezing temperatures and what actions should be taken to protect
-        utilities. In the event of severe cold weather conditions for extended periods of time, water pipes
-        may freeze. A simple prevention method to save pipes is to routinely run water for a few minutes
-        throughout the day, or leave a slow drip. Hoses should be removed from exterior faucets and the valves
-        should be closed. In the event of a frozen pipe, water should be turned off and a plumber should be 
-        notified.
-    </p>
+<p>
+    It is important to be aware of freezing temperatures and what actions should be taken to protect
+    utilities. In the event of severe cold weather conditions for extended periods of time, water pipes
+    may freeze. A simple prevention method to save pipes is to routinely run water for a few minutes
+    throughout the day, or leave a slow drip. Hoses should be removed from exterior faucets and the valves
+    should be closed. In the event of a frozen pipe, water should be turned off and a plumber should be 
+    notified.
+</p>
+</div>
     <br>
-</div>
-<div id="footer">
-    <a class="link" href="#">Contact Us</a>
-</div>
 </body>
