--- a/SeniorProj/Client/Pages/Admin.razor
+++ b/SeniorProj/Client/Pages/Admin.razor
@@ -48,7 +48,7 @@ text-align:  center;
 <div class="adminwrapper">
 <h1>Administrator</h1>
 <div id="AdminForm">
-    <form>
+    <form action="#" method="POST">
         <label for="area_affected">Select the affected area(s):</label>
         <input type="checkbox" id="70501" name="70501" value="70501">
         <label for="70501">70501</label>
