--- a/SeniorProj/Client/Pages/Login.razor
+++ b/SeniorProj/Client/Pages/Login.razor
@@ -1,4 +1,7 @@
 @page "/login"
+@using SeniorProj.Shared
+@inject HttpClient Http
+
 <style>
 div.container {
   max-width: 500px;
@@ -40,114 +43,55 @@ color:#fff;background-color:#0d6efd;border-color:#0d6efd
   </ul>
   <!-- Pills navs -->
 
+
+  @code{
+    //create new user instance and variable
+    UserLogin request = new UserLogin();
+  }
   <!-- Pills content -->
   <div class="tab-content">
     <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-      <form>
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-          <input type="email" id="loginName" class="form-control" required="" placeholder="Email or username"/>
-          <label class="form-label" for="loginName">Email or username</label>
-        </div>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <InputText id="username" @bind-Value="request.Username" class="form-control"/>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <InputText id="password" @bind-Value="request.Password" class="form-control"/>
+      </div>
 
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-          <input type="password" id="loginPassword" class="form-control" required="" placeholder="Password"/>
-          <label class="form-label" for="loginPassword">Password</label>
-        </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary btn-block mb-4" @onclick="@LoginUser" value="login">Login</button>
+      </div>
 
-        <!-- 2 column grid layout -->
-        <div class="row mb-4">
-          <div class="col-md-6 d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check mb-3 mb-md-0">
-              <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked/>
-              <label class="form-check-label" for="loginCheck"> Remember me </label>
-            </div>
-          </div>
-
-          <div class="col-md-6 d-flex justify-content-center">
-            <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
+      <!-- 2 column grid layout -->
+      <div class="row mb-4">
+        <div class="col-md-6 d-flex justify-content-center">
+          <!-- Checkbox -->
+          <div class="form-check mb-3 mb-md-0">
+            <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked/>
+            <label class="form-check-label" for="loginCheck"> Remember me </label>
           </div>
         </div>
 
-        <!-- Submit button -->
-        <div class="text-center">
-        <button type="submit" class="btn btn-primary btn-block mb-4">Log In</button>
+        <div class="col-md-6 d-flex justify-content-center">
+          <!-- Simple link -->
+          <a href="#!">Forgot password?</a>
         </div>
-        <!-- Register buttons -->
-        <div class="text-center">
-          <p>Not a member? <a href="register">Register</a></p>
-        </div>
-      </form>
-    </div>
-    <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-      <form>
-        <div class="text-center mb-3">
-          <p>Sign up with:</p>
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-facebook-f"></i>
-          </button>
+      </div>
 
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-google"></i>
-          </button>
 
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-twitter"></i>
-          </button>
-
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-github"></i>
-          </button>
-        </div>
-
-        <p class="text-center">or:</p>
-
-        <!-- Name input -->
-        <div class="form-outline mb-4">
-          <input type="text" id="registerName" class="form-control"/>
-          <label class="form-label" for="registerName">Name</label>
-        </div>
-
-        <!-- Username input -->
-        <div class="form-outline mb-4">
-          <input type="text" id="registerUsername" class="form-control"/>
-          <label class="form-label" for="registerUsername">Username</label>
-        </div>
-
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-          <input type="email" id="registerEmail" class="form-control"/>
-          <label class="form-label" for="registerEmail">Email</label>
-        </div>
-
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-          <input type="password" id="registerPassword" class="form-control"/>
-          <label class="form-label" for="registerPassword">Password</label>
-        </div>
-
-        <!-- Repeat Password input -->
-        <div class="form-outline mb-4">
-          <input type="password" id="registerRepeatPassword" class="form-control"/>
-          <label class="form-label" for="registerRepeatPassword">Repeat password</label>
-        </div>
-
-        <!-- Checkbox -->
-        <div class="form-check d-flex justify-content-center mb-4">
-          <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
-                 aria-describedby="registerCheckHelpText"/>
-          <label class="form-check-label" for="registerCheck">
-            I have read and agree to the terms
-          </label>
-        </div>
-
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-3">Sign Up</button>
-      </form>
+      <!-- Register buttons -->
+      <div class="text-center">
+        <p>Not a member? <a href="register">Register</a></p>
+      </div>
     </div>
   </div>
 </div>
-<!-- Pills content -->
+
+@code {
+  //Send User object to the Auth controller in the server
+  protected async Task LoginUser() {
+    await Http.PutAsJsonAsync<UserLogin>("login", @request);
+  }
+}
