--- a/SeniorProj/Client/Pages/Register.razor
+++ b/SeniorProj/Client/Pages/Register.razor
@@ -1,4 +1,6 @@
 @page "/register"
+@using SeniorProj.Shared
+@inject HttpClient Http
 <style>
 div.container {
   max-width: 500px;
@@ -67,6 +69,12 @@ div.container {
         </div>
       </form>
     </div>
+
+
+    @code{
+      //create new user instance and variable
+      UserDto request = new UserDto();
+    }
     <div class="tab-pane fade show active" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
       <form>
         <!-- Name input -->
@@ -77,38 +85,38 @@ div.container {
 
         <!-- Username input -->
         <div class="form-outline mb-4">
-          <input type="text" id="registerUsername" class="form-control" required placeholder="Username"/>
+          <input type="text" id="registerUsername" class="form-control" @bind="@request.Username" required/>
           <label class="form-label" for="registerUsername">Username</label>
         </div>
 
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="email" id="registerEmail" class="form-control" required="" placeholder="Email"/>
+          <input type="email" id="registerEmail" class="form-control" @bind="@request.Email" required=""/>
           <label class="form-label" for="registerEmail">Email</label>
         </div>
-      
+
         <!-- Zipcode input -->
         <div class="form-outline mb-4">
-          <input type="zip" id="registerZip" class="form-control" required="" placeholder="ZIP Code"/>
+          <input type="zip" id="registerZip" class="form-control" @bind="@request.PostalCode" required=""/>
           <label class="form-label" for="registerZip">ZIP Code</label>
         </div>
-      
+
         <!-- Password input -->
         <div class="form-outline mb-4">
-          <input type="password" id="registerPassword" class="form-control" required="" placeholder="Password"/>
+          <input type="password" id="registerPassword" class="form-control" @bind="@request.Password1" required=""/>
           <label class="form-label" for="registerPassword">Password</label>
         </div>
 
         <!-- Repeat Password input -->
         <div class="form-outline mb-4">
-          <input type="password" id="registerRepeatPassword" class="form-control" required="" placeholder="Repeat password"/>
+          <input type="password" id="registerRepeatPassword" class="form-control" @bind="@request.Password2" required=""/>
           <label class="form-label" for="registerRepeatPassword">Repeat password</label>
         </div>
 
         <!-- Checkbox -->
         <div class="form-check d-flex justify-content-center mb-4">
           <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
-                 aria-describedby="registerCheckHelpText" />
+                 aria-describedby="registerCheckHelpText" @bind="@request.Notifications"/>
           <label class="form-check-label" for="registerCheck">
             Would you like to sign up for email notifications?
           </label>
@@ -116,10 +124,18 @@ div.container {
 
         <!-- Submit button -->
         <div class="text-center">
-          <button type="submit" class="btn btn-primary btn-block mb-3">Sign up</button>
+          <button type="submit" class="btn btn-primary btn-block mb-3" @onclick="@Put" value="Save">Sign up</button>
         </div>
       </form>
     </div>
   </div>
 </div>
 <!-- Pills content -->
+
+
+@code {
+  //Send User object to the Auth controller in the server
+  protected async Task Put() {
+    await Http.PutAsJsonAsync<UserDto>("UserDto", @request);
+  }
+}
