--- a/SeniorProj/Client/Shared/NavMenu.razor
+++ b/SeniorProj/Client/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
             <li><a href=" ">Home Page</a></li>
             <li><a href="forum">Forum</a></li>
             <li><a href="outages">Outages</a></li>
-            <li><a href="NaturalDisaster">Resources</a></li> 
+            <li><a href="resources">Resources</a></li> 
         </ul>
     </div>
 </nav>
