--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -1,4 +1,4 @@
-@page "/naturaldisaster"
+@page "/resources"
 
 
 <style>
@@ -16,7 +16,7 @@
      text-align: center;
      text-indent: 30px;
      line-height: 1.5;
-     max-width: 750px;
+     max-width: 50%;
      margin: 0 auto 30px;
      margin-top: 25px;
     }
@@ -32,7 +32,7 @@
      text-align: center;
      text-indent: 30px;
      line-height: 1.5;
-     max-width: 750px;
+     max-width: 50%;
      margin: 0 auto 30px;
      margin-top: 25px;
     }
