--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -7,8 +7,8 @@
     background: #38B2E3;
     border-color:  #38B2E2;
     border-radius:  3px;
-    padding-top: 3px;
-    padding-bottom:  3px;;
+    padding-top: 5px;
+    padding-bottom:  5px;;
     }
     
     .loginlink{
@@ -23,7 +23,7 @@
     <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
     <button type="button">
         <NavLink class="loginlink" href="login">
-            Sign up/Log in
+            Sign Up/Log In
         </NavLink>
     </button>
 </div>
