added contact us footer portion, changed the favicon logo to our cropped logo, retitled the pages, changed the Login button to read "Log In" to conform to the rest of the page

--- a/SeniorProj/Client/Pages/Admin.razor
+++ b/SeniorProj/Client/Pages/Admin.razor
@@ -44,6 +44,8 @@ text-align:  center;
  
 </style>
 
+<PageTitle>Admin Section</PageTitle>
+
 <body>
 <div class="adminwrapper">
 <h1>Administrator</h1>
