--- a/SeniorProj/Client/Pages/Comm_forum_webpage.razor
+++ b/SeniorProj/Client/Pages/Comm_forum_webpage.razor
@@ -5,7 +5,7 @@
 <!-- <!DOCTYPE html> -->
 <html lang="en">
     <head>
-        <title>Community Forum</title> <!-- webpage title -->
+        <PageTitle>Community Forum</PageTitle>
 
         <meta charset="utf-8" />
 
