--- a/SeniorProj/Client/Pages/Index.razor
+++ b/SeniorProj/Client/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Droplet</PageTitle>
 
 <h1 class="d-flex justify-content-center page-item">Lafayette Utility Service Updates</h1>
 
@@ -14,8 +14,3 @@
         Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus 
         PageMaker including versions of Lorem Ipsum.
 </p>
-<footer class="card-footer">
-    <button type="button">
-        Contact us
-    </button>
-</footer>
