--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -43,6 +43,8 @@
 
 <!-- end page header section -->
 
+<PageTitle>Disaster Resources</PageTitle>
+
 <body>
 <h1>User Resources</h1>
 <div id="resources">
