--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -16,8 +16,14 @@
     text-decoration:  none;
     }
     
+    #contacts {
+    background: #38B2E3;
+    text-align:  center;
+    color:  white;
+    margin-top: 105px; /* only did this because on the sign up and login pages, the button was running into the footer. this solved it. */
+    }
+    
 </style>
-
 
 <div class="container-fluid">
     <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
@@ -33,3 +39,17 @@
 <main class="container">
     @Body
 </main>
+
+<footer class="card-footer" id="contacts">
+    <p>
+        <strong style="font-size: 30px">Contact Us</strong><br>
+        <i>If you have any questions, comments, or concerns regarding our website, please use the listed contact information.</i><br>
+        <strong>Phone</strong><br>
+        (337) 482-6768<br>
+        <strong>Email</strong><br>
+        cmix@louisiana.edu<br>
+        <strong>Address</strong><br>
+        301 E. Lewis St, Lafayette, LA 70503<br>
+    </p>
+    <img src="DropletLogo cropped.jpg" alt="DropletLogo cropped" height="70" width="65">
+</footer>
