--- a/SeniorProj/Client/Pages/Login.razor
+++ b/SeniorProj/Client/Pages/Login.razor
@@ -6,12 +6,14 @@ div.container {
 }
 </style>
 
+<PageTitle>Log In</PageTitle>
+
 <div class="container">
   <!-- Pills navs -->
   <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="login" role="tab"
-         aria-controls="pills-login" aria-selected="true">Login</a>
+         aria-controls="pills-login" aria-selected="true">Log In</a>
     </li>
     <li class="nav-item" role="presentation">
       <a class="nav-link" id="tab-register" data-mdb-toggle="pill" href="register" role="tab"
