--- a/SeniorProj/Client/Pages/Register.razor
+++ b/SeniorProj/Client/Pages/Register.razor
@@ -6,6 +6,8 @@ div.container {
 }
 </style>
 
+<PageTitle>Register</PageTitle>
+
 <div class="container">
   <!-- Pills navs -->
   <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
