--- a/SeniorProj/Client/Pages/Outages.razor
+++ b/SeniorProj/Client/Pages/Outages.razor
@@ -5,7 +5,8 @@
 
 <h3>Outages</h3>
 
-<div id = "map" style ="width:800px; height: 600px;">  </div>
+<div id = "map" style ="width:50vw; height: 65vh; position: relative;
+left:10vw; ">  </div>
 
 
 
