--- a/SeniorProj/Client/Pages/Index.razor
+++ b/SeniorProj/Client/Pages/Index.razor
@@ -1,16 +1,36 @@
 ﻿@page "/"
+<style>
+  .about-us{
+     text-align: center;
+     text-indent: 30px;
+     line-height: 1.5;
+     max-width: 50%;  
+     margin:  auto;
+    }
+    img{
+     max-width: 100%;
+     max-height: 2%;
+    }
+  h1{
+     margin-bottom: 25px;
+   }
+</style>
 
-<PageTitle>Droplet</PageTitle>
+<PageTitle>Droplet Home</PageTitle>
 
 <h1 class="d-flex justify-content-center page-item">Lafayette Utility Service Updates</h1>
 
-<img src="Lafayette-LA-Map.jpg" class="d-block me-auto ms-auto pb-3">
+<img src="Lafayette-LA-Map.jpg" class="d-block me-auto ms-auto pb-3" alt="map of the Lafayette area"> 
 
 <h3 class="d-flex justify-content-center page-item">About Us</h3>
-<p class="d-block border">placeholder Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-        has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
-        and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of 
-        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus 
-        PageMaker including versions of Lorem Ipsum.
+<p class="about-us">
+    Droplet aims to create a place where Lafayette residents can
+    sign up to recieve notifications of various issues which may occur within
+    the water utility companies in the area. Participating companies will be able
+    to notify users of issues and include estimated fix times. We aslo aim to encourage community
+    interaction within our forum. The goal of this forum is for users to be able
+    to view unconfirmed outages or issues that fellow community members are experiencing.
+    This isn't specifically limited to utilites, but is encouraged to include things like 
+    downed trees, downed power lines, or road closures that community members wish to share
+    to everyone involved.
 </p>
