--- a/SeniorProj/Client/Pages/Admin.razor
+++ b/SeniorProj/Client/Pages/Admin.razor
@@ -13,15 +13,10 @@ text-align:  center;
  
  #AdminForm{
   text-align:  left;
-  padding-right:  27%;
-  padding-left: 27%;
+  padding-right:  30%;
+  padding-left: 30%;
  }
  
- input[type=text]{
-  width:  100%;
-  padding: 12px 12px;
-  border-radius:  3px;
- }
  
  textarea{
   width:  100%;
@@ -30,17 +25,22 @@ text-align:  center;
   resize: none;
  }
  
- input[type=submit]{
-  background-color: #38B2E3;
-  color:  white;
-  text-decoration:  none;
-  border-color:  #38B2E3;
-  padding:  12px 25px;
-  border-radius:  3px;
-  text-align: center;
-  margin-left:  45%;
-  margin-right:  45%;
- }
+  .cntrbtn{
+   text-align: center;
+  }
+  
+  .ck-form{
+   white-space: nowrap;
+   max-width: 40%;
+  }
+  
+ .btn-primary{color:#fff;background-color:#38B2E3;border-color:#38B2E3; text-align: center;}
+ .btn-primary:hover{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7}
+ .btn-check:focus+.btn-primary,.btn-primary:focus{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+ .btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:#0a58ca;border-color:#0a53be}
+ .btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+ .btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:#0d6efd;border-color:#0d6efd}
+
  
 </style>
 
@@ -50,30 +50,42 @@ text-align:  center;
 <div class="adminwrapper">
 <h1>Administrator</h1>
 <div id="AdminForm">
-    <form action="#" method="POST">
-        <label for="area_affected">Select the affected area(s):</label>
-        <input type="checkbox" id="70501" name="70501" value="70501">
-        <label for="70501">70501</label>
-        <input type="checkbox" id="70503" name="70503" value="70503">
-        <label for="70503">70503</label>
-        <input type="checkbox" id="70504" name="70504" value="70504">
-        <label for="70504">70504</label>
-        <input type="checkbox" id="70506" name="70506" value="70506">
-        <label for="70506">70506</label>
-        <input type="checkbox" id="70507" name="70507" value="70507">
-        <label for="70507">70504</label>
-        <input type="checkbox" id="70508" name="70508" value="70508">
-        <label for="70508">70508</label><br><br/>
-        <input type="text" id="company_name" name="company_name" placeholder="Company Name"><br>
-        <label for="company_name">Company Name</label><br><br/>
-        <input type="text" id="time_est" name="time_est" placeholder="Enter a time ex.5:00 pm"><br>
-        <label for="time_est">Estimated repair time</label><br/><br/>
-        <input type="text" id="date_est" name="date_est" placeholder="MM/DD/YY"><br>
-        <label for="date_est">Estimated repair date</label><br><br/>
-        <label for="outage_des">Outage Description:</label><br>
-        <textarea id="outage_des" name="outage_des" rows="5" cols="33" placeholder="Give description of outage ex. Boil water advisory- Boil water for 1 minute before use."></textarea><br><br>
-        <input type="submit" value="Submit">
-    </form>
+ <form action="#" method="POST">
+  <label for="area_affected">Select the affected area(s):</label>  <!-- zip code checkbox select !-->
+  <div class="ck-form">
+  <input class="form-check-input" type="checkbox" id="70501" name="70501" value="70501">
+  <label class="form-check-label" for="70501">70501</label>
+  <input class="form-check-input" type="checkbox" id="70503" name="70503" value="70503">
+   <label class="form-check-label" for="70503">70503</label>
+   <input class="form-check-input" type="checkbox" id="70504" name="70504" value="70504">
+   <label class="form-check-label" for="70504">70504</label><br>
+   <input class="form-check-input" type="checkbox" id="70506" name="70506" value="70506">
+   <label class="form-check-label" for="70506">70506</label>
+   <input class="form-check-input" type="checkbox" id="70507" name="70507" value="70507">
+   <label class="form-check-label" for="70507">70504</label>
+   <input class="form-check-input" type="checkbox" id="70508" name="70508" value="70508">
+  <label class="form-check-label" for="70508">70508</label><br><br/>
+  </div>
+  <div class="form-outline mb-4">
+   <input type="text" id="company_name" class="form-control" name="company_name" placeholder="Company Name">  <!--form fields!-->
+   <label class="form-label" for="company_name">Company Name</label>
+  </div>
+  <div class="form-outline mb-4">
+   <input type="text" id="time_est" class="form-control" name="time_est" placeholder="Enter a time ex.5:00 pm">
+   <label class="form-label" for="time_est">Estimated repair time</label>
+  </div>
+  <div class="form-outline mb-4">
+   <input type="text" id="date_est" class="form-control" name="date_est" placeholder="MM/DD/YY">
+   <label class="form-label" for="date_est">Estimated repair date</label>
+  </div>
+  <div class="form-outline mb-4">
+   <label for="outage_des">Outage Description:</label><br>  <!-- text area for description!-->
+   <textarea id="outage_des" class="form-control" name="outage_des" rows="5" cols="33" placeholder="Give description of outage ex. Boil water advisory- Boil water for 1 minute before use."></textarea><br><br>
+  </div>
+  <div class="cntrbtn">
+  <input type="submit" class="btn btn-primary btn-block mb-4" value="Submit">
+  </div>
+ </form>
 
 </div>
 </div>
