--- a/SeniorProj/Client/Pages/Comm_forum_webpage.razor
+++ b/SeniorProj/Client/Pages/Comm_forum_webpage.razor
@@ -2,6 +2,62 @@
 
 @page "/forum"
 
+<style>
+   .cntrbtn{
+   text-align:  center;
+   }
+   
+   textarea{
+      resize: none;
+      width:  100%;
+      height:  150px;
+      border-radius:  3px;
+      
+     }
+     
+   .newPostBox{
+      text-align:  center;
+      
+      }  
+   .newPost{
+      text-align:  left;
+      padding-right:  27%;
+      padding-left: 27%;
+     }     
+    .forum-header{
+    text-align:  left;
+    max-height: 20%;
+    max-width:  50%;
+    margin-bottom:  4px;
+    }
+    
+     .postBoxes{
+      text-align:  center;
+      border: 2px solid lightgray;
+      border-radius:  5px;
+      margin:  auto;
+      max-height: 100%;
+      max-width: 50%;
+      margin-bottom:  15px;
+      }
+      
+    .forumposts{
+     text-align:  center;
+    }
+    
+     h1{
+      margin-bottom: 25px;
+     }
+     
+     .btn-primary{color:#fff;background-color:#38B2E3;border-color:#38B2E3;}
+     .btn-primary:hover{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7}
+     .btn-check:focus+.btn-primary,.btn-primary:focus{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+     .btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:#0a58ca;border-color:#0a53be}
+     .btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+     .btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:#0d6efd;border-color:#0d6efd}        
+      
+     
+</style>
 <!-- <!DOCTYPE html> -->
 <html lang="en">
     <head>
@@ -13,28 +69,56 @@
     </head>
 
     <body>
-        <div class="newPostBox"> <!-- this class will hold the new post box for the forum page. can list the new message section at the top-->
-            <div class="newPost">
-                User will be able to add new posts here. 
-                <form method="post">
-                    <div><input id="name" placeholder="Name" name="name" type="text" /></div> <!-- the placeholder shows it inside the box; looks cleaner imo -->
-                    <div><input id="message" placeholder="Message" name="message" type="text" /></div>
-                    <div><input id="postzip" placeholder="Zip Code" name="postzip" type="postzip" /></div>
-                <div><input id="submitbutton" type="submit" value="Submit" /></div>
-                </form>
+    <div class="newPostBox">
+        <h1>Forum</h1> <!-- this class will hold the new post box for the forum page. can list the new message section at the top-->
+        <div class="newPost">
+            <form method="post">
+            <div class="form-outline mb-4">
+                <input id="name" class="form-control" placeholder="Name" name="name" type="text"/>
+                <label class="form-label" for="name">Name</label>
+            </div> 
+            <div class="form-outline mb-4">
+                <input id="postzip" class="form-control" placeholder="ZIP Code" name="postzip" type="postzip"/>
+                <label class="form-label" for="postzip">ZIP Code</label>
             </div>
+            <div class="form-outline mb-4">
+                <label for="message">Message:</label>
+                <textarea id="message" class="form-control" rows="5" cols="33" placeholder="Type your message here." name="message" ></textarea>
+            </div>
+                <div class="cntrbtn">
+                    <input type="submit" class="btn btn-primary btn-block mb-4" value="Create Post">
+                </div>   
+            
+        
+            </form>
         </div>
+    </div>
+    <br/>
+    <div class="forumposts">
             <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
-                Posts made by users will be shown here.
+                <div class="forum-header">
+                    username, zipcode
+                </div>
+                posts by users will be shown here.
             </div>
             <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
+                <div class="forum-header">
+                    username, zipcode
+                </div>
                 And here. 
             </div>
             <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
+                <div class="forum-header">
+                    username, zipcode
+                </div>
                 And here. 
             </div>
             <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
+                <div class="forum-header">
+                    username, zipcode
+                </div>
                 And here. 
             </div>
+    </div>
     </body>
 </html>
