--- a/SeniorProj/Client/Pages/Login.razor
+++ b/SeniorProj/Client/Pages/Login.razor
@@ -1,9 +1,27 @@
 @page "/login"
 <style>
 div.container {
-  width: 500px;
+  max-width: 500px;
   margin: auto;
 }
+
+.nav-pills .nav-link.active,.nav-pills .show>.nav-link{color:#fff;background-color:#38B2E3}
+.btn-primary{
+color:#fff;background-color:#38B2E3;border-color:#38B2E3
+}
+.btn-primary:hover{
+color:#fff;background-color:#3DC2F7;border-color:#3DC2F7
+}
+.btn-check:focus+.btn-primary,.btn-primary:focus{
+color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)
+}
+.btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary.dropdown-toggle{
+color:#fff;background-color:#0a58ca;border-color:#0a53be
+}
+.btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}.btn-primary.disabled,.btn-primary:disabled{
+color:#fff;background-color:#0d6efd;border-color:#0d6efd
+}
+
 </style>
 
 <PageTitle>Log In</PageTitle>
@@ -28,13 +46,13 @@ div.container {
       <form>
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="email" id="loginName" class="form-control" required=""/>
+          <input type="email" id="loginName" class="form-control" required="" placeholder="Email or username"/>
           <label class="form-label" for="loginName">Email or username</label>
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-4">
-          <input type="password" id="loginPassword" class="form-control" required=""/>
+          <input type="password" id="loginPassword" class="form-control" required="" placeholder="Password"/>
           <label class="form-label" for="loginPassword">Password</label>
         </div>
 
@@ -56,7 +74,7 @@ div.container {
 
         <!-- Submit button -->
         <div class="text-center">
-        <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+        <button type="submit" class="btn btn-primary btn-block mb-4">Log In</button>
         </div>
         <!-- Register buttons -->
         <div class="text-center">
