--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -5,7 +5,6 @@
     /* Page content */
     h1{
      text-align: center;
-     margin-top: 40px;
     }
     
     h2{
@@ -18,6 +17,7 @@
      line-height: 1.5;
      max-width: 50%;
      margin: 0 auto 30px;
+     margin-top: 25px;
     }
  
     
@@ -43,7 +43,7 @@
 
 <!-- end page header section -->
 
-<PageTitle>Disaster Resources</PageTitle>
+<PageTitle>User Resources</PageTitle>
 
 <body>
 <h1>User Resources</h1>
@@ -75,6 +75,8 @@
     throughout the day, or leave a slow drip. Hoses should be removed from exterior faucets and the valves
     should be closed. In the event of a frozen pipe, water should be turned off and a plumber should be 
     notified.
+        <br>
+        <a class="link" href="https://www.redcross.org/get-help/how-to-prepare-for-emergencies/types-of-emergencies/winter-storm/frozen-pipes.html">More information</a>
 </p>
 </div>
     <br>
