--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
     padding-bottom:  5px;;
     }
     
-    .loginlink{
+    .loginlink, .loginlink:hover{
     color:  white;
     text-decoration:  none;
     }
@@ -23,11 +23,28 @@
     margin-top: 105px; /* only did this because on the sign up and login pages, the button was running into the footer. this solved it. */
     }
     
+   .btn-primary{
+   color:#fff;background-color:#38B2E3;border-color:#38B2E3
+   }
+   .btn-primary:hover{
+   color:#fff;background-color:#3DC2F7;border-color:#3DC2F7
+   }
+   .btn-check:focus+.btn-primary,.btn-primary:focus{
+   color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+   .btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary{
+   color:#fff;background-color:#0a58ca;border-color:#0a53be}
+   .btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}.btn-primary.disabled,.btn-primary:disabled{
+   color:#fff;background-color:#0d6efd;border-color:#0d6efd
+   }
+   .card-footer{
+    max-width: 100%;
+    max-height: 100%;
+   } 
 </style>
 
 <div class="container-fluid">
     <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
-    <button type="button">
+    <button type="button" class="btn btn-primary btn-block mb-3">
         <NavLink class="loginlink" href="login">
             Sign Up/Log In
         </NavLink>
