--- a/SeniorProj/Client/Pages/Outages.razor
+++ b/SeniorProj/Client/Pages/Outages.razor
@@ -2,11 +2,11 @@
 @implements IAsyncDisposable 
 
 @page "/outages"
-
+<PageTitle>Outages</PageTitle>
 <h1>Outages</h1>
 
 <div id = "map" style ="width:50vw; height: 65vh; position: relative;
-left:15vw; ">  </div>
+margin: auto; ">  </div>
 
 
 
