--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -42,6 +42,10 @@
    } 
 </style>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <div class="container-fluid">
     <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
     <button type="button" class="btn btn-primary btn-block mb-3">
