--- a/SeniorProj/Client/Pages/Register.razor
+++ b/SeniorProj/Client/Pages/Register.razor
@@ -153,7 +153,7 @@ div.container {
       user.PasswordSalt = passwordSalt;
 */
 
-      await Http.PutAsJsonAsync("User", request);
+      await Http.PutAsJsonAsync("User", @request);
 
     }
   }
