collapsed nav bar

--- a/SeniorProj/Client/Pages/Outages.razor
+++ b/SeniorProj/Client/Pages/Outages.razor
@@ -3,6 +3,16 @@
 
 @page "/outages"
 <PageTitle>Outages</PageTitle>
+<style>
+    h1{
+     text-align:  center;
+    }
+    
+    #map 
+    {
+     z-index: 99;
+    }
+</style>
 <h1>Outages</h1>
 
 <div id = "map" style ="width:50vw; height: 65vh; position: relative;
