--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -43,7 +43,7 @@
 </style>
 
 <div class="container-fluid">
-    <img src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
+    <img class="dropletlogo" src="DropletLogo.jpg" alt="Droplet Logo" height="100" width="330">
     <button type="button" class="btn btn-primary btn-block mb-3">
         <NavLink class="loginlink" href="login">
             Sign Up/Log In
