--- a/SeniorProj/Client/Shared/NavMenu.razor
+++ b/SeniorProj/Client/Shared/NavMenu.razor
@@ -1,10 +1,19 @@
 ﻿<nav>
     <div class="navbar">
+        <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <div class="navico">
+                    <div class="bars"></div>
+                    <div class="bars"></div>
+                    <div class="bars"></div>
+                </div>
+            </label>
         <ul>
             <li><a href=" ">Home Page</a></li>
             <li><a href="forum">Forum</a></li>
             <li><a href="outages">Outages</a></li>
-            <li><a href="resources">Resources</a></li> 
+            <li><a href="resources">Resources</a></li>
         </ul>
+       
     </div>
 </nav>
