added outage table, created requests on forms

--- a/SeniorProj/Client/Shared/MainLayout.razor.css
+++ b/SeniorProj/Client/Shared/MainLayout.razor.css
@@ -1,7 +1,7 @@
 @media (max-width: 858px) {
 
     button{
-        float: left;
+        float: right;
         text-align:  center;
         margin-top:  25px;
         background: #38B2E3;
