--- a/SeniorProj/Client/Pages/Index.razor
+++ b/SeniorProj/Client/Pages/Index.razor
@@ -4,7 +4,7 @@
      text-align: center;
      text-indent: 30px;
      line-height: 1.5;
-     max-width: 50%;  
+     max-width: 30rem;  
      margin:  auto;
     }
     img{
