--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -15,8 +15,8 @@
      text-align: center;
      text-indent: 30px;
      line-height: 1.5;
-     max-width: 50%;
-     margin: 0 auto 30px;
+     max-width: 30rem;
+     margin: auto;
      margin-top: 25px;
     }
  
@@ -31,8 +31,8 @@
      text-align: center;
      text-indent: 30px;
      line-height: 1.5;
-     max-width: 50%;
-     margin: 0 auto 30px;
+     max-width: 30rem;
+     margin: auto;
      margin-top: 25px;
     }
     /*end page content*/
