fixed margins on forum and admin pages

--- a/SeniorProj/Client/Pages/Admin.razor
+++ b/SeniorProj/Client/Pages/Admin.razor
@@ -16,8 +16,8 @@ text-align:  center;
  
  #AdminForm{
   text-align:  left;
-  padding-right:  30%;
-  padding-left: 30%;
+  max-width: 500px;
+  margin:  auto;
  }
  
  
