--- a/SeniorProj/Client/Pages/Comm_forum_webpage.razor
+++ b/SeniorProj/Client/Pages/Comm_forum_webpage.razor
@@ -21,8 +21,8 @@
       }  
    .newPost{
       text-align:  left;
-      padding-right:  27%;
-      padding-left: 27%;
+      max-width: 500px;
+      margin: auto;
      }     
     .forum-header{
     text-align:  left;
@@ -37,7 +37,7 @@
       border-radius:  5px;
       margin:  auto;
       max-height: 100%;
-      max-width: 50%;
+      max-width: 500px;
       margin-bottom:  15px;
       }
       
