changed the contact email to the droplet email, and refined the email notification

--- a/SeniorProj/Client/Shared/MainLayout.razor
+++ b/SeniorProj/Client/Shared/MainLayout.razor
@@ -64,7 +64,7 @@
         <strong>Phone</strong><br>
         (337) 482-6768<br>
         <strong>Email</strong><br>
-        cmix@louisiana.edu<br>
+        droplet490@gmail.com<br>
         <strong>Address</strong><br>
         301 E. Lewis St, Lafayette, LA 70503<br>
     </p>
