--- a/SeniorProj/Client/Pages/Admin.razor
+++ b/SeniorProj/Client/Pages/Admin.razor
@@ -62,51 +62,55 @@ text-align:  center;
 <body>
 <div class="adminwrapper">
 
-<h1>Administrator</h1>
-<div id="AdminForm">
- <form action="#" method="POST">
+ <h1>Administrator</h1>
+ <div id="AdminForm">
+  <form action="#" method="POST">
 
-  <label for="area_affected">Select the affected area(s):</label>  <!-- zip code checkbox select !-->
+   <label for="area_affected">Select the affected area(s):</label>  <!-- zip code checkbox select !-->
 
-    <div class="ck-form">
+   <div class="ck-form">
     <input class="form-check-input" type="checkbox" id="70501" name="70501" value="" @bind="@zips[0]">
     <label class="form-check-label" for="70501">70501</label>
 
     <input class="form-check-input" type="checkbox" id="70503" name="70503" value="" @bind="@zips[1]">
     <label class="form-check-label" for="70503">70503</label>
 
-     <input class="form-check-input" type="checkbox" id="70504" name="70504" value="" @bind="@zips[2]">
+    <input class="form-check-input" type="checkbox" id="70504" name="70504" value="" @bind="@zips[2]">
     <label class="form-check-label" for="70504">70504</label><br>
 
-     <input class="form-check-input" type="checkbox" id="70506" name="70506" value="" @bind="@zips[3]">
+    <input class="form-check-input" type="checkbox" id="70506" name="70506" value="" @bind="@zips[3]">
     <label class="form-check-label" for="70506">70506</label>
 
-     <input class="form-check-input" type="checkbox" id="70507" name="70507" value="" @bind="@zips[4]">
+    <input class="form-check-input" type="checkbox" id="70507" name="70507" value="" @bind="@zips[4]">
     <label class="form-check-label" for="70507">70507</label>
 
-     <input class="form-check-input" type="checkbox" id="70508" name="70508" value="" @bind="@zips[5]">
+    <input class="form-check-input" type="checkbox" id="70508" name="70508" value="" @bind="@zips[5]">
     <label class="form-check-label" for="70508">70508</label><br><br/>
-    </div>
-  <div class="form-outline mb-4">
-   <input type="text" id="company_name" class="form-control" name="company_name" placeholder="Company Name"@bind=@outage.CompanyName>  <!--form fields!-->
-   <label class="form-label" for="company_name">Company Name</label>
-  </div>
-  <div class="form-outline mb-4">
-   <input type="text" id="time_est" class="form-control" name="time_est" placeholder="Enter a time ex.5:00 pm" @bind=@outage.RepairTime>
-   <label class="form-label" for="time_est">Estimated repair time</label>
-  </div>
-  <div class="form-outline mb-4">
-   <input type="text" id="date_est" class="form-control" name="date_est" placeholder="MM/DD/YY" @bind=@outage.RepairDate>
-   <label class="form-label" for="date_est">Estimated repair date</label>
-  </div>
-  <div class="form-outline mb-4">
-   <label for="outage_des">Outage Description:</label><br>  <!-- text area for description!-->
-   <textarea id="outage_des" class="form-control" name="outage_des" rows="5" cols="33" placeholder="Give description of outage ex. Boil water advisory- Boil water for 1 minute before use." @bind=@outage.Description></textarea><br><br>
-  </div>
-  <div class="cntrbtn">
-  <input type="button" class="btn btn-primary btn-block mb-4"  @onclick="@SubmitOutage" value="Submit">
-  </div>
- </form>
+   </div>
+   <div class="form-outline mb-4">
+    <input type="text" id="company_name" class="form-control" name="company_name" placeholder="Company Name"@bind=@outage.CompanyName>  <!--form fields!-->
+    <label class="form-label" for="company_name">Company Name</label>
+   </div>
+   <div class="form-outline mb-4">
+    <input type="text" id="time_est" class="form-control" name="time_est" placeholder="Enter a time ex.5:00 pm" @bind=@outage.RepairTime>
+    <label class="form-label" for="time_est">Estimated repair time</label>
+   </div>
+   <div class="form-outline mb-4">
+    <input type="text" id="date_est" class="form-control" name="date_est" placeholder="MM/DD/YY" @bind=@outage.RepairDate>
+    <label class="form-label" for="date_est">Estimated repair date</label>
+   </div>
+   <div class="form-outline mb-4">
+    <label for="outage_des">Outage Description:</label><br>  <!-- text area for description!-->
+    <textarea id="outage_des" class="form-control" name="outage_des" rows="5" cols="33" placeholder="Give description of outage ex. Boil water advisory- Boil water for 1 minute before use." @bind=@outage.Description></textarea><br><br>
+   </div>
+   <div class="cntrbtn">
+    <input type="button" class="btn btn-primary btn-block mb-4"  @onclick="@SubmitOutage" value="Submit">
+   </div>
+  </form>
+
+ </div>
+</div>
+</body>
 
 @code {
 
