Home Page UI Fix
Removed map image from home page, nav bar now says "home" instead of "home page", Added water drop image to home page.

--- a/SeniorProj/Client/Pages/Index.razor
+++ b/SeniorProj/Client/Pages/Index.razor
@@ -6,21 +6,23 @@
      line-height: 1.5;
      max-width: 30rem;  
      margin:  auto;
-    }
-    img{
-     max-width: 100%;
-     max-height: 2%;
-    }
+}
   h1{
      margin-bottom: 25px;
    }
+  
+.img{
+ text-align: center;
+ margin:  auto;
+ max-width: 100%;
+ max-height: 100%;
+ margin-top:  25px;
+}
 </style>
 
 <PageTitle>Droplet Home</PageTitle>
 
-<h1 class="d-flex justify-content-center page-item">Lafayette Utility Service Updates</h1>
-
-<img src="Lafayette-LA-Map.jpg" class="d-block me-auto ms-auto pb-3" alt="map of the Lafayette area"> 
+<h1 class="d-flex justify-content-center page-item">Home</h1>
 
 <h3 class="d-flex justify-content-center page-item">About Us</h3>
 <p class="about-us">
@@ -34,3 +36,7 @@
     downed trees, downed power lines, or road closures that community members wish to share
     to everyone involved.
 </p>
+
+<div class="img">
+    <img class="DropletHome" src="DropletLogo cropped.jpg" alt="Droplet Logo">
+</div>
