--- a/SeniorProj/Client/Shared/NavMenu.razor
+++ b/SeniorProj/Client/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
                 </div>
             </label>
         <ul>
-            <li><a href=" ">Home Page</a></li>
+            <li><a href=" ">Home</a></li>
             <li><a href="forum">Forum</a></li>
             <li><a href="outages">Outages</a></li>
             <li><a href="resources">Resources</a></li>
