--- a/SeniorProj/Client/Pages/Outages.razor
+++ b/SeniorProj/Client/Pages/Outages.razor
@@ -29,6 +29,7 @@ margin: auto; ">  </div>
 @code{
     private IJSObjectReference? module;
     private string? result;
+    private Outages 
     
     protected override async void OnAfterRender(bool firstRender)
     {
